--- a/principal.html
+++ b/principal.html
@@ -89,7 +89,8 @@
         </div>
     </footer>
 
-    <a href="https://wa.me/5544984293313" target="_blank" class="whatsapp-btn">
+    <a href="https://wa.me/5544984293313?text=Olá%20queria%20saber%20mais%20sobre%20a%20Estufa%20Automatizada
+    " target="_blank" class="whatsapp-btn">
         <img src="img/icons8.png" alt="Ícone do WhatsApp">
     </a>
     
